Getting card brand

--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
 	</parent>
 
 	<groupId>dev.kaykyfreitas</groupId>
-	<artifactId>spring-boot-template</artifactId>
+	<artifactId>credit-card-validator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-template</name>
-	<description>spring-boot-template</description>
+	<name>credit-card-validator</name>
+	<description>credit-card-validator</description>
 
 	<properties>
 		<java.version>17</java.version>
